# chess-frontend

./: .dockerignore  Cargo.toml  Dockerfile  README.md  dev.sh  index.html  package-lock.json
src/: board.rs  car.rs  dom.rs  game.rs  js.rs  lib.rs  macros.rs  parser.rs  tile.rs  translator.rs  util.rs
src/pieces/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  piece.rs  queen.rs  rook.rs  strategy.rs  util.rs
www/: .env.development  .eslintrc  .gitignore  README.md  gatsby-browser.tsx  gatsby-config.ts  gatsby-node.ts  package-lock.json  package.json  tsconfig.json
www/src/: emotion.d.ts
www/src/components/: AddCarButton.tsx  Board.tsx  BoardContainer.tsx  CarContainer.tsx  CarList.tsx  ChatContainer.tsx  ChatSection.tsx  ConnectControl.tsx  ContactSection.tsx  Controls.tsx  ControlsContainer.tsx  Footer.tsx  GameContainer.tsx  GameControls.tsx  GameWrapper.tsx  Header.tsx  HorizontalBorder.tsx  IndexHero.tsx  InfoListBox.tsx  InfoListItem.tsx  ListBoxHeading.tsx  LobbyControls.tsx  LocalGameSection.tsx  MovesContainer.tsx  OnlineGameSection.tsx  Piece.tsx  PromotePieceModal.tsx  RustContainer.tsx  Tile.tsx  VerticalBorder.tsx
www/src/config/: api.ts  navLinks.ts
www/src/context/: BoardContext.tsx  ChatContext.tsx  ConnectionContext.tsx  GameContext.tsx  LoadingContext.tsx  ModalContext.tsx
www/src/handlers/: board.ts  game.ts
www/src/hooks/: forceUpdate.tsx  index.tsx  useBoardContext.tsx  useChatContext.tsx  useConnectionContext.tsx  useGameContext.tsx  useLoadingContext.tsx  useModalContext.tsx
www/src/layout/: index.tsx
www/src/pages/: chat.tsx  (+4 more)
(+53 files in other folders)
